@@ -7,6 +7,8 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 @RestController
@@ -16,11 +18,16 @@ public class ApiController {
     @GetMapping
     public ResponseEntity<String> getApi(){
         try {
-            var resource = new ClassPathResource("endpoints.json");
-            String json = new String(Files.readAllBytes(resource.getFile().toPath()));
-            return ResponseEntity.ok().header("Content-Type", "application/json").body(json);
+            ClassPathResource resource = new ClassPathResource("endpoints.json");
+            InputStream inputStream = resource.getInputStream();
+            byte[] bytes = inputStream.readAllBytes();
+            String json = new String(bytes, StandardCharsets.UTF_8);
+            return ResponseEntity.ok()
+                    .header("Content-Type", "application/json")
+                    .body(json);
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error loading Api: " + e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body("Error loading Api: " + e.getMessage());
         }
     }
 }
